Add Spark object to use dotMatrix - on single node